[project]
name = "stock-price-prediction"
version = "0.1.0"
description = "Stock price prediction data collector with IR scraping and geopolitical analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
]

[project.scripts]
stock-forecast = "stock_price_prediction.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
